Add missing service tests for newly created methods